# rocm-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/rocm/: Cargo.toml
apps/rocm/src/: main.rs  therock.rs  tui.rs
apps/rocmd/: Cargo.toml
apps/rocmd/src/: main.rs
crates/rocm-core/: Cargo.toml
crates/rocm-core/src/: lib.rs
crates/rocm-engine-protocol/: Cargo.toml
crates/rocm-engine-protocol/src/: lib.rs
docs/: codex-vendoring-plan.md  upstream-codex-sync.md
engines/pytorch/: Cargo.toml
engines/pytorch/src/: main.rs  python_worker.py
plans/: rocm-cli-implementation-plan.md  rocm-cli-pytorch-engine-spec.md
scripts/: acceptance-install-upgrade-tui-uninstall.sh  build-vendored-codex.sh  package-linux-release.sh
