[package]
name = "rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rocm-core = { path = "../../crates/rocm-core" }
rocm-engine-protocol = { path = "../../crates/rocm-engine-protocol" }
serde.workspace = true
serde_json.workspace = true
